# ml-pws

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
docs/: Makefile  conf.py  index.rst  make.bat
experiments/: 01-model-size.py  02-hyperopt.py  04-linear_ar_input.py  05-ar_input_mlpws.py  full_out.json  neuron_analysis.py  out_0.json  out_1.json  out_12.json  out_13.json  out_15.json  out_16.json  out_17.json  out_2.json  out_21.json  out_23.json  out_24.json  out_26.json  out_3.json  out_30.json  out_36.json  out_39.json  out_4.json  out_40.json  out_47.json  out_48.json  out_49.json  out_9.json  pbs_gain_sweep_mlpws.sh  pbs_neuron_all.sh
experiments/doe/: parameters.json  result.csv
experiments/experiment1/: out_10.json  out_11.json  out_14.json  out_18.json  out_19.json  out_20.json  out_5.json  (+21 more)
models/: neuron_0.pth  neuron_1.pth  neuron_10.pth  neuron_11.pth  neuron_12.pth  neuron_13.pth  neuron_14.pth  neuron_15.pth  neuron_16.pth  neuron_17.pth  neuron_18.pth  neuron_19.pth  neuron_2.pth  neuron_20.pth  neuron_21.pth  neuron_22.pth  neuron_23.pth  neuron_24.pth  neuron_25.pth  neuron_26.pth  neuron_27.pth  neuron_28.pth  neuron_29.pth  neuron_3.pth  neuron_30.pth  neuron_31.pth  neuron_32.pth  neuron_33.pth  neuron_34.pth  neuron_35.pth  neuron_36.pth  neuron_37.pth  neuron_38.pth  neuron_39.pth  neuron_4.pth  neuron_40.pth  neuron_41.pth  neuron_42.pth  neuron_43.pth  neuron_44.pth  (+56 more)
notebooks/: 01_condtional-lstm.ipynb  02_hyperopt.ipynb  03_nonlinear.ipynb  04_nonlinear.ipynb  05_channel_capacity.ipynb  06_neuron-data.ipynb  07_model_comparisons.ipynb  doe_estimate.csv  doe_vs_infonce.csv  infonce_estimate.csv  nonlinear-data.csv
scripts/: 01-ar_dataset.py  03-neuron_analysis.py  05-ar_input_mlpws.py  figure1.py  pbs_gain_sweep_gaussian.sh  pbs_gain_sweep_pws.sh  pbs_neuron.sh
src/: nonlinear_twonode.py
tests/: README.md  test_neurons_scripts.sh
(+1539 files in other folders)
