[project]
name = "ml_pws"
version = "0.1.0"
description = "A short description of the project."
authors = [{ name = "Manuel Reinhardt" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clu>=0.0.12",
    "numpy>=2.0.2",
    "polars>=1.33.1",
    "scipy>=1.16.2",
    "torch>=2.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}
