[project]
name = "ml_pws"
version = "0.1.0"
description = """
Machine learning implementation of Path Weight Sampling (PWS) models for time series analysis. 
This package provides tools for computing the mutual information in sequential data 
using autoregressive models and Monte Carlo Sampling. Built with JAX and Flax for efficient computation 
and PyTorch.
"""
authors = [{ name = "Manuel Reinhardt" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clu>=0.0.12",
    "flax>=0.11.2",
    "jax>=0.7.2",
    "lightning>=2.5.5",
    "matplotlib>=3.10.6",
    "numpy>=2.0.2",
    "polars>=1.33.1",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}
